# sacana

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  NOTICE  README.md  install.sh  sacana.service  settings.json.sample
.github/workflows/: rust.yml
src/: linux_user_manage.rs  main.rs  runtime_error.rs  slack.rs
