[package]
name = "sacana"
version = "1.0.0"
authors = ["toru.fukaya", "yoshiki.imaizumi"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "sacana (Slackbot As Computer Account maNAger)はSlack上からコンピューター上のユーザーアカウントを操作するためのSlack botです。"
readme = "README.md"
categories = ["os"]
keywords = ["slack", "bot", "account", "manager", "daemon"]
repository = "https://github.com/fixstars/sacana"

[dependencies]
chrono = "0.4.31"
env_logger = "0.10.0"
failure = "0.1.8"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
